Wed Mar 16 08:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTScheduling/Current/test.cpp:
          Call ACE_Thread_Manager::wait after orb->run to wait until
          the worker threads are finished.

Tue Mar 15 22:15:32 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerate.

	* orbsvcs/orbsvcs/AVStreams.idl:
	* orbsvcs/orbsvcs/AV/AVStreams_i.h:
	* orbsvcs/tests/Property/main.cpp:

	  Update to use CosProperty.idl, etc.

	* orbsvcs/orbsvcs/CosProperty.mpc:
	* orbsvcs/orbsvcs/CosProperty.idl:
	* orbsvcs/orbsvcs/CosPropertyService.idl:
	* orbsvcs/orbsvcs/Property/CosPropertyService_i.h:

	  Current OMG specs refer to Property Service via CosProperty.idl
	  instead of CosPropertyService.idl.  Rename *.idl file, but keep
	  a wrapper version for backwards compatibility.

Tue Mar 15 16:20:12 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/Makefile.am:

	  Regenerate.

Tue Mar 15 11:25:04 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Time_Server/Clerk_i.cpp:
	* orbsvcs/Time_Server/Server_i.cpp:

	  Change ACE_TRY/ACE_TRY_CHECK to ACE_TRY_EX/ACE_TRY_CHECK_EX
	  to handle nested emulated exceptions.

Tue Mar 15 14:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Simple/grid/README:
          Fixed typo

Tue Mar 15 10:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/NestedUpcall/Triangle_Test/initiator.cpp:
          Define the Initiator_Server within the test scope so that we know for
          sure it is destructed before the other cleanup actions

Tue Mar 15 10:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServantRetentionStrategyNonRetain.cpp:
          Use the correct typedef in system_id_to_object_id

Tue Mar 15 15:24:37 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Hang_Shutdown/test_i.h :

	  Fixed compilation errors in VC6.
