@@ -25,7 +25,8 @@ namespace TAO
     public:
       // = The skeleton methods
       virtual void send_stuff (const char* str,
-                               CORBA::Boolean flag)
+                               CORBA::Boolean flag
+                               ACE_ENV_ARG_DECL_NOT_USED)
         ACE_THROW ((CORBA::SystemException))
       {
         ACE_DEBUG ((LM_DEBUG,
